Fix: ST-2367 - Fix title overlap when image not present

--- a/src/components/C-FMT-3-call-to-action-row/_styles.scss
+++ b/src/components/C-FMT-3-call-to-action-row/_styles.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column-reverse;
   position: relative;
-  padding: 0 20px 20px;
+  padding: 20px;
   z-index: 0;
   border: 1px solid $no-background-border-color;
 
@@ -35,6 +35,14 @@
 
   .cta-row--with-background & {
     border: 0;
+  }
+
+  .cta-row--with-image.cta-row--with-background & {
+    padding-top: 0;
+
+    @include mq(tablet-landscape) {
+      padding-top: 20px;
+    }
   }
 
   .btn {
@@ -74,10 +82,10 @@
 }
 
 .cta-row__background {
-  height: calc(100% - 60px);
+  height: 100%;
   left: 0;
   position: absolute;
-  top: 60px;
+  top: 0;
   width: 100%;
   z-index: -1;
 
@@ -86,9 +94,20 @@
     top: 0;
   }
 
+  .cta-row--with-image & {
+    height: calc(100% - 60px);
+    top: 60px;
+
+    @include mq(tablet-landscape) {
+      height: 100%;
+      top: 0;
+    }
+  }
+
   img {
     height: 100%;
     object-fit: cover;
+    object-position: center;
     width: 100%;
   }
 }
